Fix the footer look on smaller screens (#49)
Fixing the footer getting squashed in smaller screens.

--- a/static/style/footer.scss
+++ b/static/style/footer.scss
@@ -14,9 +14,20 @@
     width: 100%;
     max-width: $width-xl;
 
+    @include breakpoint(tablet) {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
     a {
+      display: flex;
       text-decoration: none;
       color: $color-foreground-dark;
+
+      @include breakpoint(tablet) {
+        justify-content: center;
+      }
     }
 
     a:hover {
@@ -24,10 +35,12 @@
     }
   }
 
+  &__section {
+    margin: 0 33px;
+  }
+
   &__icon {
     &__text {
-      display: inline-block;
-      position: absolute;
       line-height: 2em;
       margin-left: 0.5em;
     }
